--- a/src/app/components/manage/manage.component.html
+++ b/src/app/components/manage/manage.component.html
@@ -277,5 +277,13 @@
         <br>
         You will have to spend connection gas fee if you want to connect again.
       </div>
+
+      <!-- <div *ngIf="!approvedForAll && !this.isLoading">
+        $Toon-contract is connected to DevilCats-contract for staking : {{approvedForAll}} <br>
+        <button class="styled" (click)="setApprovedForAllWithRefresh(true)">Connect</button>
+        <br>
+        You will have to spend connection gas fee if you want to connect.
+      </div> -->
+
     </div>
   </div>
