--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -26,6 +26,6 @@
   <br /><br />
 
 
-  <app-footer id="footer"></app-footer>
+  <app-footer id="footer" style="position: absolute;"></app-footer>
 
 </div>
