--- a/src/app/components/viewcatz/viewcatz.component.html
+++ b/src/app/components/viewcatz/viewcatz.component.html
@@ -55,8 +55,9 @@
         </div> -->
 
     <!-- ETH ADDRESS LOOK UP RESULTS-->
-    <div class="ByAddressView" *ngIf="tokenJsonArray.length >0" style="max-width: 100%; width: 65%; margin-bottom: 10%;">
-        
+    <div class="ByAddressView" *ngIf="tokenJsonArray.length >0"
+        style="max-width: 100%; width: 65%; margin-bottom: 10%;">
+
         <br>
 
         <button class="styled" (click)="clearCatObj()">Clear</button>
@@ -66,22 +67,23 @@
 
         <div id="container" style="padding-bottom: 20%;">
             <div class="row">
-                <div class="col-md-3" style="width: 20%;" id="card-lightblue-multi" *ngFor="let token of tokenJsonArray">
+                <div class="col-md-3"  id="card-lightblue-multi"
+                    *ngFor="let token of tokenJsonArray">
                     <p>{{token.data.name}}</p>
                     <img id="center-img" src={{token.data.image}} alt="logo" height="100vh" width="100"
                         style="border-radius: 5%" />
-                        <br>
-                        <br>
-                        <a style="margin: 5px"
+                    <br>
+                    <br>
+                    <a style="margin: 5px"
                         href="https://opensea.io/assets/ethereum/0x1c4a28690482b03f6991c8c24295016cba197c12/{{token.data.edition}}">
-                        <img id="center-img" src="../../../assets/openSea.png" alt="openseaLogo" height="25vh" width="25vw"
-                            style="border-radius: 5%" />
+                        <img id="center-img" src="../../../assets/openSea.png" alt="openseaLogo" height="25vh"
+                            width="25vw" style="border-radius: 5%" />
                     </a>
                     <a style="margin: 5px"
-                    href="https://rarible.com/token/0x1c4a28690482b03f6991c8c24295016cba197c12:{{token.data.edition}}?tab=overview">
-                    <img id="center-img" src="../../../assets/rarible.png" alt="rarible" height="25vh" width="25vw"
-                        style="border-radius: 5%" />
-                </a>
+                        href="https://rarible.com/token/0x1c4a28690482b03f6991c8c24295016cba197c12:{{token.data.edition}}?tab=overview">
+                        <img id="center-img" src="../../../assets/rarible.png" alt="rarible" height="25vh" width="25vw"
+                            style="border-radius: 5%" />
+                    </a>
 
 
                     <br>
@@ -102,7 +104,7 @@
         <br>
         <button class="styled" (click)="clearCatObj()">Clear</button>
         <br> <br>
-      
+
 
         <div id="card-lightblue" style="min-width: 75%;">
             <p> {{catObj.data.name}}
@@ -110,16 +112,16 @@
                 <br>
                 <img id="center-img" src={{catObj.data.image}} alt="logo" height="150vh" width="150vw"
                     style="border-radius: 5%" />
-                    <br>
-                    <br>
-                    <a style="margin: 5px"
+                <br>
+                <br>
+                <a style="margin: 5px"
                     href="https://opensea.io/assets/ethereum/0x1c4a28690482b03f6991c8c24295016cba197c12/{{catObj.data.edition}}">
                     <img id="center-img" src="../../../assets/openSea.png" alt="openseaLogo" height="25vh" width="25vw"
                         style="border-radius: 5%" />
                 </a>
 
                 <a style="margin: 5px"
-                href="https://rarible.com/token/0x1c4a28690482b03f6991c8c24295016cba197c12:{{catObj.data.edition}}?tab=overview">
+                    href="https://rarible.com/token/0x1c4a28690482b03f6991c8c24295016cba197c12:{{catObj.data.edition}}?tab=overview">
                     <img id="center-img" src="../../../assets/rarible.png" alt="rarible" height="25vh" width="25vw"
                         style="border-radius: 5%" />
                 </a>
