--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,153 +1,155 @@
 <div class="center-div" style="  display: grid;
 ">
   <div style id="styledText">
-      <h3>
-        Welcome to Toonverse Studios!
-      </h3>
-      <p> A WEB3 Art development platform.<br>
-        Our Tokenomics are really simple.
+    <h6 style="font-weight: bold; "><u>** Welcome to Toonverse Studios!
+        **</u> </h6>
+
+    <p> A WEB3 Art development platform.<br>
+      Our Tokenomics are really simple.
+      <br>
+      - Mint a DevilCat
+      <br>
+      - Stake your DevilCat to earn TOON
+      <br>
+      - Use TOON to mint future collections.
+      <br>
+      - Grow TOON ecosytem by offering entire collections for TOON or ETH.
+      <br>
+      - Grow TOON ecosytem by launchpadding other projects with ART and DEV work.
+    </p>
+    <h4>
+      <button id="styled-mint-button" style="margin: 1%;"> <a style="margin: 10%;"
+          href="https://etherscan.io/token/0x1c4a28690482b03f6991c8c24295016cba197c12#code" style="margin: 10px;">View
+          Contract</a></button>
+      <button id="styled-mint-button" style="margin: 1%;"> <a href="https://opensea.io/collection/toonversestudios"
+          style="margin: 10px">View
+          Opensea</a></button>
+      <button id="styled-mint-button" style="margin: 1%;"> <a href="https://rarible.com/toonverseStudios">View
+          Rarible</a></button>
+
+    </h4>
+  </div>
+  <div class="card" id="card-mintDevilCat">
+    <div class="container">
+      <div class="card-body">
+        <h6>**SOLD OUT**</h6>
+
+        <img id="center-img-gif" src="../../../assets/toonverse/slow.gif" alt="logo" height="40%" width="63%"
+          style="border-radius: 5%" />
         <br>
-        - Mint a DevilCat
         <br>
-        - Stake your DevilCat to earn TOON
+        <p> The DevilCats Minting has officially sold out.
+
+          <br> Ironically on new years day 2023.
+          <br> We would like to thank the community as we continue this journey in the web3 space.
+        </p>
+        <p class="yellowHighlight">{{totalSupply}} Minted!</p>
+        <p>out of</p>
+        <p class="yellowHighlight">2222</p>
         <br>
-        - Use TOON to mint future collections.
-        <br>
-        - Grow TOON ecosytem by offering entire collections for TOON or ETH.
-        <br>
-        - Grow TOON ecosytem by launchpadding other projects with ART and DEV work.
-      </p>
-      <h4>
-        <button id="styled-mint-button" style="margin: 1%;"> <a style="margin: 10%;"
-            href="https://etherscan.io/token/0x1c4a28690482b03f6991c8c24295016cba197c12#code" style="margin: 10px;">View
-            Contract</a></button>
-        <button id="styled-mint-button" style="margin: 1%;"> <a href="https://opensea.io/collection/toonversestudios"
-            style="margin: 10px">View
-            Opensea</a></button>
-        <button id="styled-mint-button" style="margin: 1%;"> <a href="https://rarible.com/toonverseStudios">View
-            Rarible</a></button>
-    
-      </h4>
+        <p>Owning a DevilCatz token entitles you to future collection drops.</p>
+
+        <button id="navbar-text" class="styled">SOLD OUT!</button>
+
+      </div>
     </div>
-      <div class="card" id="card-mintDevilCat">
-        <div class="container">
-          <div class="card-body">        <h6>**SOLD OUT**</h6>
+  </div>
+  <br>
+  <br>
 
-            <img id="center-img-gif" src="../../../assets/toonverse/slow.gif" alt="logo" height="40%" width="63%"
-              style="border-radius: 5%" />
-              <br>
-              <br>
-              <p> The DevilCats Minting has officially sold out.
 
-                <br> Ironically on new years day 2023.
-                <br> We would like to thank the community as we continue this journey in the web3 space.
-              </p>
-              <p class="yellowHighlight">{{totalSupply}} Minted!</p>
-              <p>out of</p>
-              <p class="yellowHighlight">2222</p>
-              <br> <p>Owning a DevilCatz token entitles you to future collection drops.</p> 
 
-              <button id="navbar-text" class="styled">SOLD OUT!</button>
+  <div class="container" id="text">
+    <br>
+    <h6>Coming Up to All Devil Cats Holders!</h6>
+    <p> We have TWO MINTS coming up to DevilCatz holders.<br>
+      Ladies and Gentlemen we introduce to you..<br>
+      CrazyCloudzClub.wtFluff and FruitTownGremlins.WtFruit<br>
+    </p>
+    <br>
+    <br>
 
-          </div>
+
+
+
+
+
+
+
+
+    <div class="row" style="justify-content: center;">
+
+
+
+      <div class="col" style="min-height: 100%;display: flex;justify-content: center;">
+        <div id="card-freeMint">
+
+          <br>
+          <br>
+          <img id="gremlins-img" src="../../../assets/toonverse/fruitgoblins.wtf/fruitTownGremlins.gif" alt="logo"
+            width="95%" height="180vh" style="border-radius: 75%;object-fit: contain;" />
+          <br>
+          <br>
+          <p>COMING SOON</p>
+          <p> FruitTownGremlins.wtFruit
+          </p>
+          <br>
+          <p>Free mint only available to DevilCatz Holders.</p>
+          <br>
+
         </div>
       </div>
-      <br>
-      <br>
+      <div class="col" style="min-height: 100%;display: flex;justify-content: center;">
+        <div id="card-freeMint" style="min-height: 100%;">
+          <br> <br>
 
+          <img id="cloudz-img" src="../../../assets/toonverse/clouds/clouds.gif" alt="logo" width="95%" height="180vh"
+            style="border-radius: 75%;object-fit: contain;" />
+          <br>
+          <br>
+          <p>COMING SOON</p>
+          <p>CrazyCloudzClub.wtFluff</p>
+          <br>
 
-
-      <div class="container" id="text">
-        <br>
-        <h6>Coming Up to All Devil Cats Holders!</h6>
-        <p> We have TWO MINTS coming up to DevilCatz holders.<br>
-          Ladies and Gentlemen we introduce to you..<br>
-          CrazyCloudzClub.wtFluff and FruitTownGremlins.WtFruit<br>
-        </p>
-        <br>
-        <br>
-
-
-
-
-
-
-
-
-
-        <div class="row" style="justify-content: center;">
-
-
-
-          <div class="col" style="min-height: 100%;display: flex;justify-content: center;">
-            <div id="card-freeMint">
-
-              <br>
-              <br>
-              <img id="gremlins-img" src="../../../assets/toonverse/fruitgoblins.wtf/fruitTownGremlins.gif" alt="logo"
-                width="95%" height="180vh" style="border-radius: 75%;object-fit: contain;" />
-              <br>
-              <br>
-              <p>COMING SOON</p>
-              <p> FruitTownGremlins.wtFruit
-              </p>
-              <br>
-              <p>Free mint only available to DevilCatz Holders.</p>
-              <br>
-
-            </div>
-          </div>
-          <div class="col" style="min-height: 100%;display: flex;justify-content: center;">
-            <div id="card-freeMint" style="min-height: 100%;">
-              <br> <br>
-
-              <img id="cloudz-img" src="../../../assets/toonverse/clouds/clouds.gif" alt="logo" width="95%"
-                height="180vh" style="border-radius: 75%;object-fit: contain;" />
-              <br>
-              <br>
-              <p>COMING SOON</p>
-              <p>CrazyCloudzClub.wtFluff</p>
-              <br>
-
-              <p>Free mint only available to DevilCatz Holders.</p>
-              <br>
-            </div>
-          </div>
+          <p>Free mint only available to DevilCatz Holders.</p>
+          <br>
         </div>
-
       </div>
-      <br>
-      <br>
-  
-      <div class="container" id="text" style="width: 85%;">
+    </div>
 
-        <br>
-        <br>
-       
-        <h5>
-          <u> Legal Disclaimer</u>
-        </h5>
-        <p>
+  </div>
+  <br>
+  <br>
 
-          The creators and maintainers of Toonverse Studios are not liable for any loss when trading
-          cryptocurrency tokens. The information provided on Toonverse Studios website does not constitute legal
-          advise,
-          investment advice, financial advice, trading advice, or any other sort of advice and you should not treat
-          any
-          of
-          the website’s content as such. Please note, there are always risks associated with smart contracts, use them
-          at
-          your own risk. Toonverse Studios is not a registered broker, analyst, or investment advisor, nor does Sudo
-          Shark Services team recommend that any cryptocurrency be bought, sold, or held by you. Do conduct your own
-          due
-          diligence and consult your financial advisor before making any financial decisions. Always make sure that
-          you
-          are in compliance with your local laws and regulations before
-          you make any purchase.
-          <br><br><br>
+  <div class="container" id="text" style="width: 85%;">
 
-        </p>
-      </div>
+    <br>
+    <br>
+
+    <h5>
+      <u> Legal Disclaimer</u>
+    </h5>
+    <p>
+
+      The creators and maintainers of Toonverse Studios are not liable for any loss when trading
+      cryptocurrency tokens. The information provided on Toonverse Studios website does not constitute legal
+      advise,
+      investment advice, financial advice, trading advice, or any other sort of advice and you should not treat
+      any
+      of
+      the website’s content as such. Please note, there are always risks associated with smart contracts, use them
+      at
+      your own risk. Toonverse Studios is not a registered broker, analyst, or investment advisor, nor does Sudo
+      Shark Services team recommend that any cryptocurrency be bought, sold, or held by you. Do conduct your own
+      due
+      diligence and consult your financial advisor before making any financial decisions. Always make sure that
+      you
+      are in compliance with your local laws and regulations before
+      you make any purchase.
+      <br><br><br>
+
+    </p>
+  </div>
 
 
 
