--- a/src/app/components/manage/manage.component.html
+++ b/src/app/components/manage/manage.component.html
@@ -265,7 +265,6 @@
             </div>
 
           </div>
-          <hr>
 
         </div>
 
@@ -286,4 +285,38 @@
       </div> -->
 
     </div>
+    <div class="container" *ngIf="!this.isLoading" id="text" style="width: 85%;">
+    <hr>
+
+      <br>
+      <br>
+     
+      <h5>
+        <u> Legal Disclaimer</u>
+      </h5>
+      <p>
+
+        The creators and maintainers of Toonverse Studios are not liable for any loss when trading
+        cryptocurrency tokens. The information provided on Toonverse Studios website does not constitute legal
+        advise,
+        investment advice, financial advice, trading advice, or any other sort of advice and you should not treat
+        any
+        of
+        the website’s content as such. Please note, there are always risks associated with smart contracts, use them
+        at
+        your own risk. Toonverse Studios is not a registered broker, analyst, or investment advisor, nor does Sudo
+        Shark Services team recommend that any cryptocurrency be bought, sold, or held by you. Do conduct your own
+        due
+        diligence and consult your financial advisor before making any financial decisions. Always make sure that
+        you
+        are in compliance with your local laws and regulations before
+        you make any purchase.
+        <br><br><br>
+
+      </p>
+    </div>
+
+
+
+
   </div>
