Borders around stuff , n spelling error.

--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -72,6 +72,8 @@ text-decoration: underline;
 #card-free-mints{
   background-color: aliceblue;
   border-radius: 5%;
+  border: 1mm ridge pink;
+  
   // max-width: 60%;
 
 }
@@ -81,6 +83,7 @@ text-decoration: underline;
   border-radius: 5%;
   // max-width: 70%;
   text-decoration: underline;
+  border: 1mm ridge pink;
 
 }
 
@@ -88,6 +91,7 @@ text-decoration: underline;
   background-color: aliceblue;
   border-radius: 5%;
   max-width: 555px;
+  border: 1mm ridge pink;
 }
 
 #card-mintDevilCat:hover{
@@ -102,6 +106,7 @@ text-decoration: underline;
   background-color: aliceblue;
   border-radius: 5%;
   max-width: 85%;
+  border: 1mm ridge pink;
 }
 
 
