--- a/src/app/components/manage/manage.component.html
+++ b/src/app/components/manage/manage.component.html
@@ -74,7 +74,7 @@
           <br />
           <p style="font-size: 1.25em;">Please finish transaction <br> or <br>wait for blokchain to confirm...
             <br>
-            The page will referesh on its own.
+            The page will refresh on its own.
           </p>
           <br />
         </div>
