--- a/src/app/components/viewcatz/viewcatz.component.html
+++ b/src/app/components/viewcatz/viewcatz.component.html
@@ -4,6 +4,7 @@
         <br>
         <h6 style="font-weight: bold; "><u>** View Your Catz or Others!
                 **</u> </h6>
+                View STAKED CATZ by looking up $TOON contract address (0x61DED8A72cDc7762D159ab46bE880BE7127A2DeF)
 
 
         <div class="row" style="justify-content: center;margin-top: 5%;margin-bottom: 5%;">
@@ -14,12 +15,13 @@
                 <div id="card-lightblue" style="min-height: 100%;
                     max-width: 350px;
                     margin-left: auto;
-                    margin-right: auto;">
+                    margin-right: auto;
+                    border: 1mm ridge pink;">
                     <p>Eth Address</p>
                     <p>Lookup</p>
                     <mdb-form-control>
                         <input mdbInput (ngModelChange)="updateSearchedAddress($event)" [ngModel]="searchedAddress"
-                            type="text" id="typeText" class="styled" placeholder="Eth Address" /><br>
+                            type="text" id="typeText" class="styled" style="border: 1mm ridge pink;" placeholder="Eth Address" /><br>
                         <button mdbLabel (click)="searchByEthAddress()" class="styled" for="typeText">Search</button>
                     </mdb-form-control>
 
@@ -32,13 +34,14 @@
                 <div id="card-lightblue" style="min-height: 100%;
                     max-width: 350px;
                     margin-left: auto;
-                    margin-right: auto;">
+                    margin-right: auto;
+                    border: 1mm ridge pink;">
                     <p>DevilCat ID#</p>
                     <p>Lookup</p>
                     <mdb-form-control>
-                        <input mdbInput (ngModelChange)="updateSearchedID($event)" [ngModel]="searchedId" type="number"
-                            min="0" max="2222" id="typeText" placeholder="DevilCatID#" class="styled" /><br>
-                        <button (click)="searchById()" class="styled" for="typeText">Search</button>
+                        <input mdbInput  (ngModelChange)="updateSearchedID($event)" [ngModel]="searchedId" type="number"
+                            min="0" max="2222" id="typeText" placeholder="DevilCatID#" class="styled" style="border: 1mm ridge pink;" /><br>
+                        <button (click)="searchById()" class="styled" for="typeText" >Search</button>
                     </mdb-form-control>
                 </div>
             </div>
