--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -1,3 +1,12 @@
+.hoverText:hover{
+  text-decoration: underline;
+  
+  }
+  .hoverText{
+    text-shadow: 1px 1px 1px #000;
+    
+    }
+
 .navbar-image img {
     transition: 0.5s all ease-in-out;
   }
@@ -40,7 +49,7 @@
         rgba(0, 0, 0, 0));
     box-shadow: inset 2px 2px 3px pink, inset -2px -2px 3px rgba(0, 0, 0, 0.6);
   }
-  
+ 
   .styledDisabled {
     max-width: 200px;
   
