made toon.address global

--- a/src/app/components/manage/manage.component.html
+++ b/src/app/components/manage/manage.component.html
@@ -72,7 +72,7 @@
             <span class="visually-hidden">...</span>
           </div>
           <br />
-          <p style="font-size: 1.25em;">Please finish transaction <br> or <br>wait for blokchain to confirm...
+          <p style="font-size: 1.25em;">Please finish transaction <br> or <br>wait for blockchain to confirm...
             <br>
             The page will refresh on its own.
           </p>
