--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -94,13 +94,13 @@ text-decoration: underline;
   border: 1mm ridge pink;
 }
 
-#card-mintDevilCat:hover{
-  background-color: bisque;
-  border-radius: 5%;
-  max-width: 650px;
-  text-decoration: underline;
+// #card-mintDevilCat:hover{
+//   background-color: bisque;
+//   border-radius: 5%;
+//   max-width: 650px;
+//   text-decoration: underline;
 
-}
+// }
 
 #card-freeMint{
   background-color: aliceblue;
