--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -29,6 +29,76 @@
 
     </h4>
   </div>
+
+  <!-- <div class="container" style="justify-content: center;
+  display: flex;">
+
+  <mdb-carousel [controls]="true" [indicators]="true" [animation]="'fade'" style="padding :50px">
+   
+    <mdb-carousel-item style="min-width: 50%; min-height: 350px;">
+  <div class="card" id="card-mintDevilCat">
+    <div class="container">
+      <div class="card-body">
+        <p >FruitTownGremlins.WTFruit<p>
+
+        <img id="center-img-gif" src="../../../assets/toonverse/fruitgremlins.wtf/ftgbanner.png" alt="logo" height="40%" width="63%"
+          style="border-radius: 5%" />
+        <br>
+        <br>
+        <p> A fruity gremlin derivative with a twist.</p>
+
+        <button id="navbar-text" class="styled">Go To Dashboard.</button>
+
+      </div>
+    </div>
+  </div>
+    </mdb-carousel-item>
+
+    <mdb-carousel-item style="min-width: 50%; min-height: 350px;">
+      <div class="card" id="card-mintDevilCat">
+        <div class="container">
+          <div class="card-body">
+            <p>CrazyCloudClub.WtFluff<p>
+    
+            <img id="center-img-gif" src="../../../assets/toonverse/clouds/Music.png" alt="logo" height="40%" width="63%"
+              style="border-radius: 5%" />
+            <br>
+            <br>
+            <p> These crazy cloud are sure not to rain on your parade.</p>
+    
+            <button id="navbar-text" class="styled">Coming Soon.</button>
+    
+          </div>
+        </div>
+      </div>
+    </mdb-carousel-item>
+
+    <mdb-carousel-item style="min-width: 50%; min-height: 350px;"> 
+      <div class="card" id="card-mintDevilCat">
+        <div class="container">
+          <div class="card-body">
+            <p>TangGang.OGT</p>
+    
+            <img id="center-img-gif" src="../../../assets/toonverse/fruitgremlins.wtf/ftgbanner.png" alt="logo" height="40%" width="63%"
+              style="border-radius: 5%" />
+            <br>
+            <br>
+            <p> Animated Orangutangs with an urban twist.</p>
+    
+            <button id="navbar-text" class="styled">Coming Soon.</button>
+    
+          </div>
+        </div>
+      </div>
+
+    </mdb-carousel-item>
+ 
+  </mdb-carousel>
+
+  </div>
+   -->
+
+
   <div class="card" id="card-mintDevilCat">
     <div class="container">
       <div class="card-body">
@@ -86,7 +156,7 @@
 
           <br>
           <br>
-          <img id="gremlins-img" src="../../../assets/toonverse/fruitgoblins.wtf/fruitTownGremlins.gif" alt="logo"
+          <img id="gremlins-img" src="../../../assets/toonverse/fruitgremlins.wtf/fruitTownGremlins.gif " alt="logo"
             width="95%" height="180vh" style="border-radius: 75%;object-fit: contain;" />
           <br>
           <br>
