--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -39,6 +39,9 @@
         </li>
         <li class="nav-item">
         </li>
+        <li class="nav-item">
+          <p id="navbar-text"(click)="basicNavbar.toggle()" class="styled" [routerLink]="['/marketplace']">Marketplace</p>
+        </li>
 
 
         <!-- <li class="nav-item" id="nav-item">
