--- a/src/app/components/fruittown/fruittown.component.html
+++ b/src/app/components/fruittown/fruittown.component.html
@@ -21,11 +21,46 @@ width="95%" height="180vh" style="border-radius: 75%;object-fit: contain;" /><br
             Mint
           </button>
     </div>
-    <div class="col">staked address claim</div>
-    <div class="col">$toon coin claim</div>
+    <div class="col">staked address claim
+<p> check to see if address has claimed yet.</p>
+        <button class="styled">
+            Mint 15!
+          </button>
+
+    </div>
+    <div class="col">$toon coin claim
+        <br>
+        look up amount of $toon in wallet
+        <mdb-range [min]="0" [max]="50"></mdb-range>
+        <button class="styled">
+            Mint
+          </button>
+
+
+    </div>
   </div>
   <div class="d-flex align-items-center bg-light mb-3" style="height: 100px;">
-    <div class="col">free mint option</div>
-    <div class="col">buy contract with eth</div>
-    <div class="col">buy contract with $toon</div>
+    <div class="col">free mint option
+        <br>
+        look up if free mint is possible right now
+        <mdb-range [min]="0" [max]="10"></mdb-range>
+        <button class="styled">
+            Mint
+          </button>
+
+
+    </div>
+    <div class="col">buy contract with eth
+        <br>
+        <button class="styled">
+            Become Owner
+          </button>
+    </div>
+    <div class="col">buy contract with $toon
+        <br>
+        <button class="styled">
+            Become Owner
+
+          </button>
+    </div>
   </div>
