--- a/src/app/components/marketplace/marketplace.component.html
+++ b/src/app/components/marketplace/marketplace.component.html
@@ -38,7 +38,7 @@
                         <img src="../../../assets//toonverse/fruitgremlins.wtf/ftgbanner.png" class="rounded-circle"
                             alt="" style="width: 45px; height: 45px" />
                         <div class="ms-3">
-                            <p class="fw-bold mb-1">FruitTownGremlins.WTFruit</p>
+                            <p class="fw-bold mb-1">Fruit Town Gremlins</p>
                         </div>
                     </div>
                 </td>
@@ -58,7 +58,7 @@
                         <img src="../../../assets/toonverse//tanggang/tangGang.png" class="rounded-circle" alt=""
                             style="width: 45px; height: 45px" />
                         <div class="ms-3">
-                            <p class="fw-bold mb-1">TangGang</p>
+                            <p class="fw-bold mb-1">Tang Gang</p>
                         </div>
                     </div>
                 </td>
@@ -79,7 +79,7 @@
                         <img src="../../../assets/toonverse//clouds/Music.png" class="rounded-circle" alt=""
                             style="width: 45px; height: 45px" />
                         <div class="ms-3">
-                            <p class="fw-bold mb-1">CrazyCloudClan.WTFluff</p>
+                            <p class="fw-bold mb-1">Cloudy Frens</p>
                         </div>
                     </div>
                 </td>
@@ -99,7 +99,7 @@
                         <img src="../../../assets/toonverse/sourpuss/main.png" class="rounded-circle" alt=""
                             style="width: 45px; height: 45px" />
                         <div class="ms-3">
-                            <p class="fw-bold mb-1">Sour Puss Freindz</p>
+                            <p class="fw-bold mb-1">Sour Puss</p>
                         </div>
                     </div>
                 </td>
