--- a/src/app/components/fruittown/fruittown.component.html
+++ b/src/app/components/fruittown/fruittown.component.html
@@ -1,36 +1,74 @@
-<h6 style="font-weight: bold; "><u>**FruitTownGremlins.WTFruit**</u> </h6>
+<h6 style="font-weight: bold; "><u>Fruit Town Gremlins</u> </h6>
 
 {{fruitTownAddress}} <br>
 <br><br>
+
+<br><h6>A Fruity Gremlin Project With a Twist.</h6><br>
+
+
+<figure class="text-center">
+  <blockquote class="blockquote">
+    <p>
+      <br><h1>Citizens of Fruit Town are Outraged.</h1>
+      "Fruit Town Residents Peel out in Anger as <br>
+      Web3 Bandits Make off with their Precious Produce"
+    </p>
+  </blockquote>
+  <figcaption class="blockquote-footer">
+    Fruit Town Insider <cite title="Source Title">MFing Grems</cite>
+  </figcaption>
+</figure>
+<br>
 <img id="gremlins-img" src="../../../assets/toonverse/fruitgremlins.wtf/fruitTownGremlins.gif " alt="logo"
-width="95%" height="180vh" style="border-radius: 75%;object-fit: contain;" /><br>
-
-<br><br>A fruity gremlin derivative with a twist.<br>
-
-
-<div class="d-flex align-items-start bg-light mb-3">
-    <div class="col">1 Free Mint per DevilCat
-        <br>
-        look up amount of devilcatz in wallet.
-        <br>
-        look up amount of devil catz staked.
-        <br>
-        amount you can claim.
+width="95%" height="180vh" style="border-radius: 75%;object-fit: contain;" /><br><br>
+<figure class="text-center">
+  <blockquote class="blockquote">
+    <p>
+      In Fruit Town, a Gremlin <br>
+      With Mischief in his Heart, he'll take<br>
+      Your Fruit, your Crypto, and your Non-Fungible Art.<br>
+    </p>
+  </blockquote>
+  <figcaption class="blockquote-footer">
+    Some Fruit Town mfer.. <cite title="Source Title">Sour Ass</cite>
+  </figcaption>
+</figure>
+<br>
+ 
+<div class="d-flex align-items-center bg-clear mb-5">
+  <div class="p-5">Sweetness Selector: 
+    <br>
+  </div> 
+    <div class="p-5">1 Free Mint Per DevilCat:
+      <br>
+        <!-- look up amount of devilcatz in wallet. -->
+        <!-- look up amount of devil catz staked. -->
+        <!-- amount you can claim. -->
         <mdb-range [min]="0" [max]="50"></mdb-range>
         <button class="styled">
             Mint
           </button>
     </div>
-    <div class="col">staked address claim
+    <div class="p-3">Free Mint:
+      <br>
+      <!-- look up if free mint is possible right now -->
+      <mdb-range [min]="0" [max]="10"></mdb-range>
+      <button class="styled">
+          Mint
+        </button>
+
+
+  </div><br>
+    <!-- <div class="col">staked address claim
 <p> check to see if address has claimed yet.</p>
         <button class="styled">
             Mint 15!
           </button>
 
-    </div>
-    <div class="col">$toon coin claim
+    </div> -->
+    <div class="p-3">$TOON Claim:
         <br>
-        look up amount of $toon in wallet
+        <!-- look up amount of $toon in wallet -->
         <mdb-range [min]="0" [max]="50"></mdb-range>
         <button class="styled">
             Mint
@@ -39,8 +77,12 @@ width="95%" height="180vh" style="border-radius: 75%;object-fit: contain;" /><br
 
     </div>
   </div>
-  <div class="d-flex align-items-center bg-light mb-3" style="height: 100px;">
-    <div class="col">free mint option
+  
+  <div class="d-flex align-items-center bg-clear mb-3" style="height: 100px;">
+    <div class="p-5">Pear-Fect Picker: 
+      <br>
+    </div> 
+    <!-- <div class="col">free mint option
         <br>
         look up if free mint is possible right now
         <mdb-range [min]="0" [max]="10"></mdb-range>
@@ -49,18 +91,26 @@ width="95%" height="180vh" style="border-radius: 75%;object-fit: contain;" /><br
           </button>
 
 
-    </div>
-    <div class="col">buy contract with eth
-        <br>
+    </div><br> -->
+    <div class="p-5">Staked Address Claim:<br><br>
+      <!-- <p>Check to see if address has claimed yet.</p> -->
+              <button class="styled">
+                  Mint your 15
+                </button>
+      
+          </div>
+    <div class="p-3">Buy Contract With ETH:
+        <br><br>
         <button class="styled">
             Become Owner
           </button>
-    </div>
-    <div class="col">buy contract with $toon
-        <br>
+    </div><br>
+    <div class="p-3">Buy Contract With $TOON
+        <br><br>
         <button class="styled">
             Become Owner
 
           </button>
     </div>
+    <br>
   </div>
