--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -108,7 +108,7 @@
           style="border-radius: 5%" />
         <br>
         <br>
-        <p> The DevilCats Minting has officially sold out.
+        <p> The Devil Cats Minting has officially sold out.
 
           <br> Ironically on new years day 2023.
           <br> We would like to thank the community as we continue this journey in the web3 space.
@@ -161,7 +161,7 @@
           <br>
           <br>
           <p>COMING SOON</p>
-          <p> FruitTownGremlins.wtFruit
+          <p> Fruit Town Gremlins
           </p>
           <br>
           <p>Free mint only available to DevilCatz Holders.</p>
@@ -178,7 +178,7 @@
           <br>
           <br>
           <p>COMING SOON</p>
-          <p>CrazyCloudzClub.wtFluff</p>
+          <p>Cloudy Frens</p>
           <br>
 
           <p>Free mint only available to DevilCatz Holders.</p>
@@ -207,7 +207,7 @@
       investment advice, financial advice, trading advice, or any other sort of advice and you should not treat
       any
       of
-      the website’s content as such. Please note, there are always risks associated with smart contracts, use them
+      the website's content as such. Please note, there are always risks associated with smart contracts, use them
       at
       your own risk. Toonverse Studios is not a registered broker, analyst, or investment advisor, nor does Sudo
       Shark Services team recommend that any cryptocurrency be bought, sold, or held by you. Do conduct your own
